# Boardgame_platform

./: .gitignore  GamePlatfrom_dev_skill.md  LICENSE  README.md  pyproject.toml  requirements.txt
framework/: __init__.py  net_bridge.py  room.py  server.py
framework/core/: __init__.py  base_bridge.py  base_game.py  base_player.py  protocol.py
framework/games/: __init__.py
framework/games/avalon/: plugin.py
framework/games/incan_gold/: plugin.py
framework/games/manila/: plugin.py
framework/games/transcard/: plugin.py
framework/static/: index.html  lobby.js
framework/static/games/: avalon.js  incan_gold.js  manila.js  transcard.js
skill/: GamePlatfrom_dev_skill.md  README.md  add-game.md  architecture.md  debugging.md  deploy.md  frontend.md  protocol.md
tools/: dev.sh  fetch-games.sh  games.conf  start.sh  test-startup.sh
