[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gameplatform"
version = "0.1.0"
description = "泛用多人联机桌游平台框架"
requires-python = ">=3.7"
dependencies = [
    "fastapi>=0.95",
    "uvicorn[standard]>=0.20",
    "websockets>=10",
]

[project.optional-dependencies]
manila = ["pygame>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*"]
